[package]
name = "benchmark"
version = "0.1.0"
authors = ["Mambisi Zempare <lilbizi96@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
merkle_storage = { path = "../" }
sled = {version = "0.34.4", features=["compression"]}
rayon = "1.5.0"
rand = "0.7.3"
chrono = "0.4"
timer = "0.2.0"