[package]
name = "benchmark"
version = "0.1.0"
authors = ["Mambisi Zempare <lilbizi96@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
merkle = { path = "../merkle" }
sled = { version = "0.34.4", features = ["compression"] }
rayon = "1.5.0"
rand = "0.7.3"
chrono = "0.4"
timer = "0.2.0"
bincode = "1.3"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
reqwest = { version = "0.10", features = ["json"] }
tokio = { version = "0.2", features = ["full"] }
clap = "2.33.3"
tracing = "0.1"
tracing-subscriber = "0.2"
sysinfo = "0.15.3"
tui = "0.13.0"
termion = "1.5.5"